# gpr-200-fa2024-cooper-thronson

./: CMakeLists.txt
assignments/Final_Project/: CMakeLists.txt  main.cpp
assignments/Final_Project/assets/Shaders/: bgFragShader.frag  bgVertexShader.vert  fragmentShader.frag  sunFragShader.frag  sunVertexShader.vert  vertexShader.vert  waterFragmentShader.frag  waterVertexShader.vert
assignments/assignment1_helloTriangle/: CMakeLists.txt  main.cpp
assignments/assignment1_helloTriangle/assets/Shaders/: fragmentShader.frag
assignments/assignment_2/: CMakeLists.txt  main.cpp
assignments/assignment_2/assets/Shaders/: bgFragShader.frag  bgVertexShader.vert  fragmentShader.frag  vertexShader.vert
assignments/assignment_3/: CMakeLists.txt  main.cpp
assignments/assignment_3/assets/Shaders/: bgFragShader.frag  bgVertexShader.vert  fragmentShader.frag  sunFragShader.frag  sunVertexShader.vert  vertexShader.vert
assignments/assignment_5/: CMakeLists.txt  main.cpp
assignments/assignment_5/assets/Shaders/: bgFragShader.frag  bgVertexShader.vert  fragmentShader.frag  lightbulbShader.frag  lightbulbShader.vert
core/: CMakeLists.txt
core/CThronson/: Shader.cpp  Shader.h  Texture.cpp  Texture.h
